syntax = "proto3";

option go_package = "github.com/RitaGlushkova/raft-otel/client_rpc";

package client_rpc;

// The command sent by client to a leading server.
service Command {
  rpc Store (Request) returns (Reply) {}
}

// The request message by client
message Request {
  Entry entry = 1;
}

message Entry {
  string key = 1;
  int64 value = 2;
}

// The response message containing the result from server both leader
message Reply {
  int64 suggestedLeaderID = 1;
  bool isLeader = 2;
  string notLeaderMessage = 3;
  string successMessage = 4;
  AcceptedEntry entry = 5;
}

message AcceptedEntry {
  string key = 1;
  int64 value = 2;
}